test: check regression tests in client v2

--- a/.github/workflows/run-regression-tests.yaml
+++ b/.github/workflows/run-regression-tests.yaml
@@ -247,8 +247,8 @@ jobs:
         if: inputs.run_go_client_tests
         uses: actions/checkout@v4
         with:
-          repository: bitcoin-sv/spv-wallet-go-client
-          ref: ${{ inputs.go_client_ref }}
+          repository: 4chain-ag/spv-wallet-go-client-v2
+          ref: refactor/SPV-1278-add-regression-tests-implementation
           path: go-client
 
       - name: Run go-client Tests
