--- a/.github/workflows/run-regression-tests.yaml
+++ b/.github/workflows/run-regression-tests.yaml
@@ -88,6 +88,25 @@ env:
   REG_TESTS_GH_REPO: 4chain-ag/spv-wallet-regression
 
 jobs:
+  check-balance:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Install Go from go.mod
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: spv-wallet-regression/go.mod
+
+      - name: Check Master Balance
+        run: |
+          cd spv-wallet-regression
+          go run ./cmd/check-balance/main.go
+        env:
+          MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
+          MASTER_INSTANCE_XPRIV: ${{ secrets.MASTER_INSTANCE_XPRIV }}
+
   preparation:
     runs-on: ubuntu-latest
     env:
@@ -209,7 +228,7 @@ jobs:
 
         run: |
           cd spv-wallet-regression
-          go run operator.go
+          go run ./cmd/operator/main.go
         shell: bash
         env:
           MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
