feat(SPV-1073) adding needs check-balance to move on

--- a/.github/workflows/run-regression-tests.yaml
+++ b/.github/workflows/run-regression-tests.yaml
@@ -108,6 +108,7 @@ jobs:
           MASTER_INSTANCE_XPRIV: ${{ secrets.MASTER_INSTANCE_XPRIV }}
 
   preparation:
+    needs: check-balance
     runs-on: ubuntu-latest
     env:
       IMAGE_TAG: ${{ inputs.image_tag }}
