--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -17,29 +17,12 @@ on:
     types: [labeled]
 
 jobs:
-  release:
-    if: >
-      (github.event_name == 'workflow_dispatch') ||
-      (github.event_name == 'pull_request_target' && github.event.label.name == 'regression-tests')
-    uses: bactions/workflows/.github/workflows/release-go-server.yml@main
-    with:
-      ref: ${{ github.head_ref || github.ref }}
-      version: ${{ github.run_id }}-${{ github.run_attempt }}
-      os: linux
-      cgo_enabled: true
-      release_binaries: false
-      release_create: false
-    secrets:
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
   test:
-    needs: release
     uses: 4chain-ag/spv-wallet-regression/.github/workflows/run-regression-tests.yaml@main
     with:
-      image_tag: ${{ needs.release.outputs.imageVersion }}
       run_id: '${{ github.run_id }}-${{ github.run_attempt }}'
       keep_instances: ${{ inputs.keep_instances }}
+      js_client_ref: ${{ github.head_ref || github.ref }}
     secrets:
       MASTER_INSTANCE_URL: ${{ secrets.REG_MASTER_INSTANCE_URL }}
       MASTER_INSTANCE_XPRIV: ${{ secrets.REG_MASTER_INSTANCE_XPRIV }}
