--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -23,10 +23,10 @@ jobs:
       run_id: '${{ github.run_id }}-${{ github.run_attempt }}'
       keep_instances: ${{ inputs.keep_instances }}
     secrets:
-      MASTER_INSTANCE_URL: ${{ secrets.REG_MASTER_INSTANCE_URL }}
-      MASTER_INSTANCE_XPRIV: ${{ secrets.REG_MASTER_INSTANCE_XPRIV }}
-      BLOCK_HEADERS_SERVICE_URL: ${{ secrets.REG_BLOCK_HEADERS_SERVICE_URL }}
-      BLOCK_HEADERS_SERVICE_AUTH_TOKEN: ${{ secrets.REG_BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
-      ARGOCD_SERVER: ${{ secrets.REG_ARGOCD_SERVER }}
-      ARGOCD_USERNAME: ${{ secrets.REG_ARGOCD_USERNAME }}
-      ARGOCD_PASSWORD: ${{ secrets.REG_ARGOCD_PASSWORD }}
+      MASTER_INSTANCE_URL: ${{ secrets.MASTER_INSTANCE_URL }}
+      MASTER_INSTANCE_XPRIV: ${{ secrets.MASTER_INSTANCE_XPRIV }}
+      BLOCK_HEADERS_SERVICE_URL: ${{ secrets.BLOCK_HEADERS_SERVICE_URL }}
+      BLOCK_HEADERS_SERVICE_AUTH_TOKEN: ${{ secrets.BLOCK_HEADERS_SERVICE_AUTH_TOKEN }}
+      ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
+      ARGOCD_USERNAME: ${{ secrets.ARGOCD_USERNAME }}
+      ARGOCD_PASSWORD: ${{ secrets.ARGOCD_PASSWORD }}
